--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3'
-
 services:
     unblockneteasemusic:
         build: .
@@ -7,7 +5,7 @@ services:
             NODE_ENV: production
 
         # Change sources here
-        # command: ["-o", "bilibili", "kugou", "kuwo", "ytdlp"]
+        command: ["-o", "navidrome", "kuwo", "migu"]
 
         ports:
             - ${HTTP_PROXY_PORT:-8080}:8080
