--- a/package.json
+++ b/package.json
@@ -41,10 +41,13 @@
 		"pino-pretty": "^7.6.1"
 	},
 	"devDependencies": {
+		"@babel/core": "^7.25.2",
+		"@babel/preset-env": "^7.25.4",
 		"@swc/core": "^1.3.44",
 		"@types/node": "^18.15.11",
 		"@types/pino": "6.3.12",
 		"@yarnpkg/sdks": "^3.0.0-rc.42",
+		"babel-loader": "^9.2.1",
 		"browserslist": "^4.21.5",
 		"core-js": "^3.29.1",
 		"cross-env": "^7.0.3",
@@ -54,8 +57,8 @@
 		"swc-loader": "^0.2.3",
 		"terser-webpack-plugin": "^5.3.7",
 		"typescript": "^5.0.3",
-		"webpack": "^5.77.0",
-		"webpack-cli": "^5.0.1"
+		"webpack": "^5.95.0",
+		"webpack-cli": "^5.1.4"
 	},
 	"resolutions": {
 		"minimatch": "^3.0.5",
