--- a/package.json
+++ b/package.json
@@ -41,10 +41,13 @@
 		"pino-pretty": "^7.6.1"
 	},
 	"devDependencies": {
+		"@babel/core": "^7.26.0",
+		"@babel/preset-env": "^7.26.0",
 		"@swc/core": "^1.7.22",
 		"@types/node": "^22.5.1",
 		"@types/pino": "6.3.12",
 		"@yarnpkg/sdks": "^3.2.0",
+		"babel-loader": "^9.2.1",
 		"browserslist": "^4.23.3",
 		"core-js": "^3.38.1",
 		"cross-env": "^7.0.3",
@@ -54,7 +57,7 @@
 		"swc-loader": "^0.2.6",
 		"terser-webpack-plugin": "^5.3.10",
 		"typescript": "^5.5.4",
-		"webpack": "^5.94.0",
+		"webpack": "^5.97.1",
 		"webpack-cli": "^5.1.4"
 	},
 	"resolutions": {
